<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddNewProductActivity">

    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="372dp"
        android:layout_height="258dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="39dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_product_image"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_product_image"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:autofillHints=""
        android:background="@drawable/input_design"
        android:hint="@string/product_name"
        android:inputType="textMultiLine"
        android:padding="20dp" tools:targetApi="o"/>


    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"
        android:hint="@string/product_price"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:autofillHints="" tools:targetApi="o" />

    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="123dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/add_product"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>